--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-clickaway": "^2.2.2",
     "vue-router": "^3.1.5",
+    "vue2-perfect-scrollbar": "^1.5.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
