--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
+    "vue-dragscroll": "^2.0.1",
     "vue-router": "^3.1.5",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuex": "^3.1.2"
