--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.25.3",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
+    "vue-cookies": "^1.7.0",
     "vue-dragscroll": "^2.0.1",
     "vue-router": "^3.1.5",
     "vue2-perfect-scrollbar": "^1.5.0",
