--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-cookies": "^1.7.0",
     "vue-dragscroll": "^2.0.1",
+    "vue-paypal-checkout": "^3.2.0",
     "vue-router": "^3.1.5",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuex": "^3.1.2"
